--- a/percolate.ipynb
+++ b/percolate.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Percolate\n",
+    "\n",
+    "Hur perforerad behöver en N x N kub vara för att det ska finnas en väg från toppen till botten?\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
