--- a/percolate.ipynb
+++ b/percolate.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Percolate\n",
     "\n",
-    "Hur perforerad behöver en N x N kub vara för att det ska finnas en väg från toppen till botten?\n"
+    "Hur perforerad behöver en N x N kub vara för att det ska finnas en väg från toppen till botten?\n",
+    "\n",
+    "Den röda pricken i grafen anger vilken punkt som fick simulationen att \"perkolera\".\n"
    ]
   },
   {
